external-crates/move/crates/move-compiler/tests/move_2024/parsing/address_weird_formatting.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
input_file: crates/move-compiler/tests/move_2024/parsing/address_weird_formatting.move
---
error[E13002]: feature is deprecated in specified edition
  ┌─ tests/move_2024/parsing/address_weird_formatting.move:1:1
  │
1 │ address 
  │ ^^^^^^^ 'address' blocks are deprecated. Use addresses directly in module definitions instead.
  ·
6 │     module m {
  │            - Replace with '0x2::m'
